# tublemetry

./: .gitignore  README.md  pyproject.toml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  event-log.jsonl  metrics.json  state-manifest.json
.gsd/activity/: 001-research-slice-M002-S01.jsonl  002-plan-slice-M002-S01.jsonl  003-execute-task-M002-S01-T01.jsonl  004-execute-task-M002-S01-T02.jsonl  005-complete-slice-M002-S01.jsonl  006-run-uat-M002-S01.jsonl  007-research-slice-M002-S02.jsonl  008-plan-slice-M002-S02.jsonl  009-execute-task-M002-S02-T01.jsonl  010-execute-task-M002-S02-T02.jsonl  (+11 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: WIRING-GUIDE.md
esphome/: secrets.yaml.example  tublemetry.yaml  tubtron.yaml
ha/: dashboard.yaml  drift_detection.yaml  heating_tracker.yaml  sensors.yaml  stale_data.yaml  templates.yaml  thermal_model.yaml  thermal_runaway.yaml  thermal_runaway_clear.yaml  tou_automation.yaml
protocol/: .gitignore  README.md  rs485-status-2026-03-08.md
reference/: status_03_08.md
scripts/: analyze_heating.py  secrets-generate.sh  secrets-store.sh
tests/: conftest.py  test_auto_refresh.py  test_button_injection.py  test_cross_check.py  test_decode.py  test_display_state.py  test_drift_detection.py  test_esphome_yaml.py  test_frame_integrity.py  test_frame_parser.py  test_heater_power.py  test_ladder_capture.py  test_mock_frames.py  test_number_entity.py  test_packages.py  test_setpoint_detection.py  test_stale_data.py  test_status_bits.py  test_thermal_runaway.py  test_tou_automation.py
(+163 files in other folders)
