[project]
name = "tubtron"
version = "0.1.0"
description = "VS300FL4 hot tub RS-485 display decoder and automation"
readme = "README.md"
authors = [
    { name = "Chris Kaschner", email = "chriskaschner@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
